--- a/index.html
+++ b/index.html
@@ -324,17 +324,17 @@ h6 { font-family: 'Roboto'; font-style: normal; font-weight: 100; text-decoratio
 									themify-social-links">
 									<ul class="social-links horizontal">
 										<li class="social-link-item instagram font-icon icon-medium">
-											<a href="https://www.instagram.com/giangoivlog/">
+											<a href="https://www.instagram.com//">
 												<i class="fa fa-instagram"></i>
 											</a>
 										</li>
 										<li class="social-link-item facebook font-icon icon-medium">
-											<a href="https://www.facebook.com/giangoivlog/">
+											<a href="https://www.facebook.com//">
 												<i class="fa fa-facebook"></i>
 											</a>
 										</li>
 										<li class="social-link-item youtube font-icon icon-medium">
-											<a href="https://www.youtube.com/channel/UC-AJnWGWhPt3ReFnvzRZ-Kg">
+											<a href="https://www.youtube.com//">
 												<i class="fa fa-youtube"></i>
 											</a>
 										</li>
